Fix more.js algorythm and style more / less buttons to be more visible

--- a/assets/less/events.less
+++ b/assets/less/events.less
@@ -815,6 +815,26 @@ bh-chat {
 	}
 }
 
+a.more, a.less  {
+	.border-radius(1px);
+	display: inline-block;
+	height: 13px;
+	width: 13px;
+	color: white;
+	text-align: center;
+	line-height: 13px;
+	background: #4995bb;
+	&:hover {
+		color: white;
+		background: #2578b4;
+		text-decoration: none;
+	}
+}
+
+a.less {
+	line-height: 11px;
+}
+
 .expand-chat {
 	background: #71bee5;
 	text-shadow: 0 -1px 0 #5394d9;
